--- a/src/webapp/WEB-INF/pages/user-edit.html
+++ b/src/webapp/WEB-INF/pages/user-edit.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+<form method="POST" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+    <input type="hidden" name="_method" value="PATCH">
 
     <label for="name">Name</label>
     <input type="text" th:field="*{firstName}" id="name"/>
@@ -27,6 +28,27 @@
     <input type="submit" value="Update">
 
 </form>
+
+<!--<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">-->
+
+<!--    <label for="name">Name</label>-->
+<!--    <input type="text" th:field="*{firstName}" id="name"/>-->
+
+<!--    <br>-->
+
+<!--    <label for="lastname">Lastname</label>-->
+<!--    <input type="text" th:field="*{lastName}" id="lastname"/>-->
+
+<!--    <br>-->
+
+<!--    <label for="email">E-mail</label>-->
+<!--    <input type="text" th:field="*{email}" id="email"/>-->
+
+<!--    <br>-->
+
+<!--    <input type="submit" value="Update">-->
+
+<!--</form>-->
 
 
 </body>
