--- a/src/webapp/WEB-INF/pages/user-view.html
+++ b/src/webapp/WEB-INF/pages/user-view.html
@@ -16,13 +16,20 @@
 
 <br>
 
-<a th:href="@{/{id}/edit(id=${user.getId()})}">Edit</a>
+<form th:action="@{/{id}/edit(id=${user.getId()})}">
+    <button type="submit">Edit</button>
+</form>
 
 <br>
 
-<form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">
+<form method="POST" th:action="@{/{id}(id=${user.getId()})}">
+    <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="Delete">
 </form>
+
+<!--<form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">-->
+<!--    <input type="submit" value="Delete">-->
+<!--</form>-->
 
 </body>
 </html>
