--- a/src/webapp/WEB-INF/pages/user-list.html
+++ b/src/webapp/WEB-INF/pages/user-list.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Users</title>
-</head>
-<body>
-<div>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Lastname</th>
-            <th>E-mail</th>
-        </tr>
-        <tr th:each="user : ${user_list}">
-            <td>
-                <a th:href="@{/{id}/(id=${user.getId()})}" th:utext="${user.getId()}">id</a>
-            </td>
-            <td th:utext="${user.getFirstName()}">name</td>
-            <td th:utext="${user.getLastName()}">lastname</td>
-            <td th:utext="${user.getEmail()}">email</td>
-        </tr>
-    </table>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Users</title>
+    </head>
 
-    <br>
+    <body>
+        <table border="1">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Lastname</th>
+                <th>E-mail</th>
+            </tr>
+            <tr th:each="user : ${user_list}">
+                <td>
+                    <a th:href="@{/view/(id=${user.getId()})}" th:utext="${user.getId()}">id</a>
+                </td>
+                <td th:utext="${user.getFirstName()}">name</td>
+                <td th:utext="${user.getLastName()}">lastname</td>
+                <td th:utext="${user.getEmail()}">email</td>
+            </tr>
+        </table>
 
-    <a href="/new">Create new user</a>
+        <br>
 
-</div>
-
-</body>
-</html>
+        <a href="/new">Create new user</a>
+    </body>
 </html>
