--- a/src/webapp/WEB-INF/pages/user-new.html
+++ b/src/webapp/WEB-INF/pages/user-new.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>New User</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>New User</title>
+    </head>
 
+    <body>
+        <form th:method="post" th:action="@{/}" th:object="${user}">
 
-<form th:method="POST" th:action="@{/}" th:object="${user}">
+            <label for="name">Name</label>
+            <input type="text" th:field="*{firstName}" id="name"/>
 
-    <label for="name">Name</label>
-    <input type="text" th:field="*{firstName}" id="name"/>
+            <br>
 
-    <br>
+            <label for="lastname">Lastname</label>
+            <input type="text" th:field="*{lastName}" id="lastname"/>
 
-    <label for="lastname">Lastname</label>
-    <input type="text" th:field="*{lastName}" id="lastname"/>
+            <br>
 
-    <br>
+            <label for="email">E-mail</label>
+            <input type="text" th:field="*{email}" id="email"/>
 
-    <label for="email">E-mail</label>
-    <input type="text" th:field="*{email}" id="email"/>
+            <br>
+            <br>
 
-    <br>
-    <br>
-
-    <input type="submit" value="Create">
-
-</form>
-
-
-</body>
+            <input type="submit" value="Create">
+        </form>
+    </body>
 </html>
