--- a/src/webapp/WEB-INF/pages/user-edit.html
+++ b/src/webapp/WEB-INF/pages/user-edit.html
@@ -10,16 +10,19 @@
         <form th:method="POST" th:action="@{/save/(id=${user.getId()})}" th:object="${user}">
             <label for="name">Name</label>
             <input type="text" th:field="*{firstName}" id="name"/>
+            <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name error</div>
 
             <br>
 
             <label for="lastname">Lastname</label>
             <input type="text" th:field="*{lastName}" id="lastname"/>
+            <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
 
             <br>
 
             <label for="email">E-mail</label>
             <input type="text" th:field="*{email}" id="email"/>
+            <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
 
             <br>
 
