--- a/src/webapp/WEB-INF/pages/user-new.html
+++ b/src/webapp/WEB-INF/pages/user-new.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>New User</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>New User</title>
+</head>
 
-    <body>
-        <form th:method="post" th:action="@{/}" th:object="${user}">
+<body>
+<form th:method="post" th:action="@{/}" th:object="${user}">
 
-            <label for="name">Name</label>
-            <input type="text" th:field="*{firstName}" id="name"/>
+    <label for="name">Name</label>
+    <input type="text" th:field="*{firstName}" id="name"/>
+    <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name error</div>
 
-            <br>
+    <br>
 
-            <label for="lastname">Lastname</label>
-            <input type="text" th:field="*{lastName}" id="lastname"/>
+    <label for="lastname">Lastname</label>
+    <input type="text" th:field="*{lastName}" id="lastname"/>
+    <div style="color:red" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
 
-            <br>
+    <br>
 
-            <label for="email">E-mail</label>
-            <input type="text" th:field="*{email}" id="email"/>
+    <label for="email">E-mail</label>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
 
-            <br>
-            <br>
+    <br>
 
-            <input type="submit" value="Create">
-        </form>
-    </body>
+    <input type="submit" value="Create">
+</form>
+</body>
 </html>
